--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
         <li><strong>a.</strong> Bất kể thời điểm nào Người dùng truy cập ứng dụng, EatsHub sẽ cố gắng cung cấp cho Người dùng quyền truy cập thông tin cá nhân của mình. Nếu thông tin bị sai hoặc không chính xác, chúng tôi sẽ cung cấp cho Người dùng cách để cập nhật nhanh chóng hoặc xóa thông tin đó, trừ các thông tin mà chúng tôi phải giữ lại cho mục đích pháp lý hoặc kinh doanh hợp pháp. Khi cập nhật các thông tin cá nhân, EatsHub có thể yêu cầu Người dùng xác minh danh tính trước khi EatsHub xử lý yêu cầu của Người dùng.</li>
         <li><strong>b.</strong> Chúng tôi có thể từ chối các yêu cầu lặp lại nhiều lần một cách bất hợp lý, đòi hỏi các nỗ lực không tương xứng về kỹ thuật, gây rủi ro đến sự riêng tư của người khác hoặc quá phi thực tế. (ví dụ: thay đổi thông tin số điện thoại quá 03 lần/ngày);</li>
         <li><strong>c.</strong> Chúng tôi sẽ có thể cung cấp quyền truy cập và chỉnh sửa thông tin, EatsHub cung cấp quyền như vậy miễn phí, trừ khi việc đó đòi hỏi sự nỗ lực không tương xứng. EatsHub cố gắng duy trì các sản phẩm, dịch vụ của mình theo cách bảo vệ thông tin không bị phá hoại do vô tình hay cố ý. Do vậy, sau khi Người dùng xóa thông tin cá nhân của chính mình, EatsHub có thể không xóa ngay khỏi máy chủ của EatsHub và có thể không xóa thôngtin khỏi hệ thống sao lưu của chúng tôi.</li>
-    </ul>
+        <li><strong>d.</strong> Bạn có thể xóa tài khoản của mình bất kỳ lúc nào trong mục "Thông tin cá nhân" của ứng dụng. Khi xóa tài khoản, toàn bộ thông tin cá nhân liên quan sẽ được xóa vĩnh viễn khỏi hệ thống của chúng tôi.</li>   
+ </ul>
 
     <h2>10. Cơ chế tiếp nhận và giải quyết khiếu nại</h2>
     <ul>
